--- a/src/components/cadastro/Cadastro.css
+++ b/src/components/cadastro/Cadastro.css
@@ -1,4 +1,5 @@
 /* cadastro (estilo igual imc) */
+
 .section-cadastro {
   padding: 100px 0;
   background-color: var(--fit-black);
@@ -65,7 +66,8 @@
   margin-top: 10px;
 }
 
-/* responsividade cadastro */
+/* responsividade */
+
 @media (max-width: 768px) {
   .cadastro-form .input-group {
     flex-direction: column;
