--- a/src/components/cadastro/Cadastro.css
+++ b/src/components/cadastro/Cadastro.css
@@ -1,5 +1,4 @@
 /* cadastro (estilo igual imc) */
-
 .section-cadastro {
   padding: 100px 0;
   background-color: var(--fit-black);
@@ -66,7 +65,7 @@
   margin-top: 10px;
 }
 
-/* responsividade */
+/* responsividade cadastro */
 
 @media (max-width: 768px) {
   .cadastro-form .input-group {
