exclusao de bordas dos forms + verde neon adicional

--- a/src/components/calculo/Calculo.css
+++ b/src/components/calculo/Calculo.css
@@ -11,11 +11,11 @@
 }
 
 .calculo-form {
-  background: var(--fit-gray);
+  background: transparent; /*fundo do form*/
   padding: 60px;
   border-radius: 15px;
-  border-right: 4px solid var(--green-neon);
-  border-left: 4px solid var(--green-neon);
+  /*border-right: 4px solid var(--green-neon);
+  border-left: 4px solid var(--green-neon);*/
   width: 100%;
   max-width: 800px; /* mantém o padrão do cadastro */
   text-align: center;
