--- a/src/components/cadastro/Cadastro.css
+++ b/src/components/cadastro/Cadastro.css
@@ -1,8 +1,18 @@
 /* cadastro (estilo igual imc) */
 .section-cadastro {
   padding: 100px 0;
-  background-color: var(--fit-black);
+  background-color: var(--fit-black); /* fundo da pag abaixo do form */
 }
+
+.section-title {
+  font-size: 3.2rem;
+  text-align: center;
+  text-transform: none !important; 
+  color: #A7FF83;
+  margin-bottom: 50px;
+  margin-top: 40px; 
+}
+
 
 .cadastro-wrapper {
   display: flex;
@@ -10,12 +20,11 @@
 }
 
 .cadastro-form {
-  background: var(--fit-gray);
+  background: transparent; /*fundo do form*/
   padding: 60px;
   border-radius: 15px;
-  border-right: 4px solid var(--green-neon);
-  border-left: 4px solid var(--green-neon);
-  width: 100%;
+  /*border-right: 4px solid #888;
+  border-left: 4px solid #888; /* borda form lado esquerdo */
   max-width: 800px; /* form cumprido igual imc */
   text-align: center;
 }
@@ -42,7 +51,7 @@
 }
 
 .cadastro-form .class-input label {
-  color: var(--green-neon);
+  color: #888;
   font-size: 0.8rem;
   text-transform: none !important;
   margin-bottom: 8px;
@@ -52,12 +61,19 @@
 .cadastro-form .class-input input {
   width: 100%;
   padding: 18px;
-  background: var(--fit-input);
-  border: 1px solid #333;
+  background: rgba(10, 10, 10, 0.5); /* fundo dos inputs semi-transparente */
+  border: 2px solid #333; /* borda campo formulario */
   color: #fff;
   font-size: 1.1rem;
   outline: none;
   transition: 0.3s;
+}
+/* efeito ao clicar no campo */
+
+.cadastro-form .class-input input:focus{
+  /* cursor focus so aparece quando clicar no campo */
+  border-color: var(--green-neon);
+  box-shadow: 0 0 10px rgba(57, 255, 20, 0.2); /* brilho */
 }
 
 .cadastro-form .btn-main {
