--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,7 @@ body {
   display: inline-block;
   transition: 0.3s ease;
   text-decoration: none;
+  border-radius: 999px; /* deixa o botao redondo */
 }
 
 .btn-main:hover {
