--- a/src/components/planos/Planos.css
+++ b/src/components/planos/Planos.css
@@ -1,7 +1,13 @@
 .memberships-section {
   padding: 100px 0;
   background-color: var(--fit-black);
+  /* a imagem agora fica na secao inteira */
+  background-image: url("/img/3.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
+
 
 .membership-grid {
   display: flex;
