--- a/src/components/sobrenos/Sobrenos.css
+++ b/src/components/sobrenos/Sobrenos.css
@@ -46,13 +46,13 @@
   font-weight: 700;
   font-size: 1.1rem;
   color: #fff;
-  text-transform: none !important;
+  text-transform: none;
 }
 
 .instrutor-cargo {
   color: var(--green-neon);
   font-size: 0.9rem;
-  text-transform: none !important;
+  text-transform: none;
   margin-top: 5px;
 }
 
