--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -6,7 +6,6 @@
   width: 100%;
   min-height: 100svh; /* 🔥 corrige bug de 100vh no mobile */
   position: relative;
-
   background:
     linear-gradient(to right, rgba(0,0,0,0.85) 35%, transparent),
     url("https://vfitclub.netlify.app/image/hero-background.webp")
@@ -15,7 +14,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
   padding-top: 120px;   /* espaço navbar */
   padding-bottom: 120px; /* espaço footer */
 }
@@ -80,6 +78,17 @@
    CARD DIREITO (FORM)
 ========================= */
 
+.login-hero-right h3 {
+  color: var(--green-soft);
+}
+
+.login-hero-right {
+  width: 400px;
+  backdrop-filter: blur(14px);
+  padding: 36px 40px;
+  border: 1px solid rgba(255,255,255,0.08);
+  box-shadow: 0 25px 70px rgba(0,0,0,0.7);
+}
 .login-hero-right {
   width: 400px;
   background: rgba(0,0,0,0.6);
@@ -87,7 +96,15 @@
   padding: 36px 40px;
   border: 1px solid rgba(255,255,255,0.08);
   box-shadow: 0 25px 70px rgba(0,0,0,0.7);
+  text-align: center; /* centraliza o botão */
 }
+
+.login-hero-right button {
+  text-align: center;  /* centraliza horizontalmente o texto */
+  display: inline-block; /* garante que o botão se comporte como bloco inline */
+  padding: 10px 20px;    /* ajusta o tamanho do botão */
+}
+
 
 /* =========================
    FORMULÁRIO
@@ -113,7 +130,7 @@
 }
 
 .login-form input::placeholder {
-  color: rgba(255,255,255,0.45);
+  color: r(255,255,255,0.45);
 }
 
 .login-form input:focus {
@@ -124,6 +141,7 @@
 .login-form .btn-main {
   margin-top: 10px;
   height: 50px;
+  align-items: center;
 }
 
 /* =========================
