--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -108,7 +108,7 @@
 .login-form input {
   height: 46px;
   padding: 0 14px;
-  background: rgba(0,0,0,0.55);
+  background: rgba(0, 0, 0, 0.55);
   color: #fff;
 }
 
